src/components/Job/JobForm.scss
@import '../../styles/mixin';
@import '../../styles/variables';

.job-form {
  @include flex(column, center);

  .job-form__field-container {
    background-color: $neon-02-23-hex;
    border-radius: 20px;
    padding: 5rem;
    width: 500px;
    min-width: 400px;
  }
  .job-form__field {
    @include flex(column, center);
    label {
      color: white;
      letter-spacing: 0.1rem;
      margin-bottom: 1rem;
      font-size: 1.5rem;
    }
    input {
      margin-bottom: 2rem;
      padding: 0.5rem;
      width: 100%;
      background-color: rgba(255, 255, 255, 0.938);
      border: none;
      border-radius: 5px;
      outline: none;
      font-size: 1.3rem;
      letter-spacing: 0.1rem;
      text-align: center;
      color: rgb(0, 0, 0);
      &::placeholder {
        opacity: 1;
        color: rgba(177, 177, 177, 0);
      }
    }
  }
  button {
    width: 100%;
    margin-top: 1rem;
  }
}

